turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:95: error: not found: value init
		init();
                ^Turmite:121: error: not found: value nbSteps
		for (stepIt <- 1 to nbSteps) {
                                    ^